additional/ifxqlyacc2/y.output

state 0
	$accept: .ALL_QUERIES $end 

	SELECT  shift 7
	SHOW  shift 8
	CREATE  shift 9
	.  error

	STATEMENT  goto 2
	SHOW_DATABASES_STATEMENT  goto 4
	CREATE_DATABASE_STATEMENT  goto 5
	SELECT_STATEMENT  goto 3
	SHOW_MEASUREMENTS_STATEMENT  goto 6
	ALL_QUERIES  goto 1

state 1
	$accept:  ALL_QUERIES.$end 

	$end  accept
	.  error


state 2
	ALL_QUERIES:  STATEMENT.    (1)
	ALL_QUERIES:  STATEMENT.SEMICOLON 
	ALL_QUERIES:  STATEMENT.SEMICOLON ALL_QUERIES 

	SEMICOLON  shift 10
	.  reduce 1 (src line 67)


state 3
	STATEMENT:  SELECT_STATEMENT.    (4)

	.  reduce 4 (src line 80)


state 4
	STATEMENT:  SHOW_DATABASES_STATEMENT.    (5)

	.  reduce 5 (src line 85)


state 5
	STATEMENT:  CREATE_DATABASE_STATEMENT.    (6)

	.  reduce 6 (src line 89)


state 6
	STATEMENT:  SHOW_MEASUREMENTS_STATEMENT.    (7)

	.  reduce 7 (src line 93)


state 7
	SELECT_STATEMENT:  SELECT.COLUMN_NAMES FROM_CLAUSE GROUP_BY_CLAUSE WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT 

	MUL  shift 13
	IDENT  shift 14
	.  error

	COLUMN_NAMES  goto 11
	COLUMN_NAME  goto 12

state 8
	SHOW_DATABASES_STATEMENT:  SHOW.DATABASES 
	SHOW_MEASUREMENTS_STATEMENT:  SHOW.MEASUREMENTS WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT 

	DATABASES  shift 15
	MEASUREMENTS  shift 16
	.  error


state 9
	CREATE_DATABASE_STATEMENT:  CREATE.DATABASE IDENT 

	DATABASE  shift 17
	.  error


state 10
	ALL_QUERIES:  STATEMENT SEMICOLON.    (2)
	ALL_QUERIES:  STATEMENT SEMICOLON.ALL_QUERIES 

	SELECT  shift 7
	SHOW  shift 8
	CREATE  shift 9
	.  reduce 2 (src line 72)

	STATEMENT  goto 2
	SHOW_DATABASES_STATEMENT  goto 4
	CREATE_DATABASE_STATEMENT  goto 5
	SELECT_STATEMENT  goto 3
	SHOW_MEASUREMENTS_STATEMENT  goto 6
	ALL_QUERIES  goto 18

state 11
	SELECT_STATEMENT:  SELECT COLUMN_NAMES.FROM_CLAUSE GROUP_BY_CLAUSE WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT 
	FROM_CLAUSE: .    (15)

	FROM  shift 20
	.  reduce 15 (src line 139)

	FROM_CLAUSE  goto 19

state 12
	COLUMN_NAMES:  COLUMN_NAME.    (9)
	COLUMN_NAMES:  COLUMN_NAME.COMMA COLUMN_NAMES 

	COMMA  shift 21
	.  reduce 9 (src line 112)


state 13
	COLUMN_NAME:  MUL.    (11)

	.  reduce 11 (src line 121)


state 14
	COLUMN_NAME:  IDENT.    (12)
	COLUMN_NAME:  IDENT.AS IDENT 

	AS  shift 22
	.  reduce 12 (src line 126)


state 15
	SHOW_DATABASES_STATEMENT:  SHOW DATABASES.    (50)

	.  reduce 50 (src line 293)


state 16
	SHOW_MEASUREMENTS_STATEMENT:  SHOW MEASUREMENTS.WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT 
	WHERE_CLAUSE: .    (25)

	WHERE  shift 24
	.  reduce 25 (src line 185)

	WHERE_CLAUSE  goto 23

state 17
	CREATE_DATABASE_STATEMENT:  CREATE DATABASE.IDENT 

	IDENT  shift 25
	.  error


state 18
	ALL_QUERIES:  STATEMENT SEMICOLON ALL_QUERIES.    (3)

	.  reduce 3 (src line 76)


state 19
	SELECT_STATEMENT:  SELECT COLUMN_NAMES FROM_CLAUSE.GROUP_BY_CLAUSE WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT 
	GROUP_BY_CLAUSE: .    (20)

	GROUP  shift 27
	.  reduce 20 (src line 162)

	GROUP_BY_CLAUSE  goto 26

state 20
	FROM_CLAUSE:  FROM.TABLE_NAMES 

	IDENT  shift 30
	.  error

	TABLE_NAMES  goto 28
	TABLE_NAME  goto 29

state 21
	COLUMN_NAMES:  COLUMN_NAME COMMA.COLUMN_NAMES 

	MUL  shift 13
	IDENT  shift 14
	.  error

	COLUMN_NAMES  goto 31
	COLUMN_NAME  goto 12

state 22
	COLUMN_NAME:  IDENT AS.IDENT 

	IDENT  shift 32
	.  error


state 23
	SHOW_MEASUREMENTS_STATEMENT:  SHOW MEASUREMENTS WHERE_CLAUSE.ORDER_CLAUSES LIMIT_INT 
	ORDER_CLAUSES: .    (42)

	ORDER  shift 34
	.  reduce 42 (src line 258)

	ORDER_CLAUSES  goto 33

state 24
	WHERE_CLAUSE:  WHERE.CONDITION 

	IDENT  shift 38
	INTEGER  shift 40
	DURATIONVAL  shift 41
	STRING  shift 42
	NUMBER  shift 39
	.  error

	CONDITION  goto 35
	CONDITION_VAR  goto 37
	OPERATION_EQUAL  goto 36

state 25
	CREATE_DATABASE_STATEMENT:  CREATE DATABASE IDENT.    (51)

	.  reduce 51 (src line 298)


state 26
	SELECT_STATEMENT:  SELECT COLUMN_NAMES FROM_CLAUSE GROUP_BY_CLAUSE.WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT 
	WHERE_CLAUSE: .    (25)

	WHERE  shift 24
	.  reduce 25 (src line 185)

	WHERE_CLAUSE  goto 43

state 27
	GROUP_BY_CLAUSE:  GROUP.BY DIMENSION_NAMES 

	BY  shift 44
	.  error


state 28
	FROM_CLAUSE:  FROM TABLE_NAMES.    (14)

	.  reduce 14 (src line 134)


state 29
	TABLE_NAMES:  TABLE_NAME.    (16)
	TABLE_NAMES:  TABLE_NAME.COMMA TABLE_NAMES 

	COMMA  shift 45
	.  reduce 16 (src line 143)


state 30
	TABLE_NAME:  IDENT.    (18)

	.  reduce 18 (src line 152)


state 31
	COLUMN_NAMES:  COLUMN_NAME COMMA COLUMN_NAMES.    (10)

	.  reduce 10 (src line 117)


state 32
	COLUMN_NAME:  IDENT AS IDENT.    (13)

	.  reduce 13 (src line 130)


state 33
	SHOW_MEASUREMENTS_STATEMENT:  SHOW MEASUREMENTS WHERE_CLAUSE ORDER_CLAUSES.LIMIT_INT 
	LIMIT_INT: .    (49)

	LIMIT  shift 47
	.  reduce 49 (src line 289)

	LIMIT_INT  goto 46

state 34
	ORDER_CLAUSES:  ORDER.BY SORTFIELDS 

	BY  shift 48
	.  error


state 35
	WHERE_CLAUSE:  WHERE CONDITION.    (24)
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION.OR CONDITION 

	AND  shift 49
	OR  shift 50
	.  reduce 24 (src line 180)


state 36
	CONDITION:  OPERATION_EQUAL.    (26)

	.  reduce 26 (src line 189)


state 37
	OPERATION_EQUAL:  CONDITION_VAR.OPER CONDITION_VAR 

	EQ  shift 52
	NEQ  shift 53
	LT  shift 54
	LTE  shift 55
	GT  shift 56
	GTE  shift 57
	.  error

	OPER  goto 51

state 38
	CONDITION_VAR:  IDENT.    (36)

	.  reduce 36 (src line 232)


state 39
	CONDITION_VAR:  NUMBER.    (37)

	.  reduce 37 (src line 237)


state 40
	CONDITION_VAR:  INTEGER.    (38)

	.  reduce 38 (src line 241)


state 41
	CONDITION_VAR:  DURATIONVAL.    (39)

	.  reduce 39 (src line 245)


state 42
	CONDITION_VAR:  STRING.    (40)

	.  reduce 40 (src line 249)


state 43
	SELECT_STATEMENT:  SELECT COLUMN_NAMES FROM_CLAUSE GROUP_BY_CLAUSE WHERE_CLAUSE.ORDER_CLAUSES LIMIT_INT 
	ORDER_CLAUSES: .    (42)

	ORDER  shift 34
	.  reduce 42 (src line 258)

	ORDER_CLAUSES  goto 58

state 44
	GROUP_BY_CLAUSE:  GROUP BY.DIMENSION_NAMES 

	IDENT  shift 61
	.  error

	DIMENSION_NAMES  goto 59
	DIMENSION_NAME  goto 60

state 45
	TABLE_NAMES:  TABLE_NAME COMMA.TABLE_NAMES 

	IDENT  shift 30
	.  error

	TABLE_NAMES  goto 62
	TABLE_NAME  goto 29

state 46
	SHOW_MEASUREMENTS_STATEMENT:  SHOW MEASUREMENTS WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT.    (52)

	.  reduce 52 (src line 303)


state 47
	LIMIT_INT:  LIMIT.INTEGER 

	INTEGER  shift 63
	.  error


state 48
	ORDER_CLAUSES:  ORDER BY.SORTFIELDS 

	IDENT  shift 66
	.  error

	SORTFIELDS  goto 64
	SORTFIELD  goto 65

state 49
	CONDITION:  CONDITION AND.CONDITION 

	IDENT  shift 38
	INTEGER  shift 40
	DURATIONVAL  shift 41
	STRING  shift 42
	NUMBER  shift 39
	.  error

	CONDITION  goto 67
	CONDITION_VAR  goto 37
	OPERATION_EQUAL  goto 36

state 50
	CONDITION:  CONDITION OR.CONDITION 

	IDENT  shift 38
	INTEGER  shift 40
	DURATIONVAL  shift 41
	STRING  shift 42
	NUMBER  shift 39
	.  error

	CONDITION  goto 68
	CONDITION_VAR  goto 37
	OPERATION_EQUAL  goto 36

state 51
	OPERATION_EQUAL:  CONDITION_VAR OPER.CONDITION_VAR 

	IDENT  shift 38
	INTEGER  shift 40
	DURATIONVAL  shift 41
	STRING  shift 42
	NUMBER  shift 39
	.  error

	CONDITION_VAR  goto 69

state 52
	OPER:  EQ.    (30)

	.  reduce 30 (src line 207)


state 53
	OPER:  NEQ.    (31)

	.  reduce 31 (src line 212)


state 54
	OPER:  LT.    (32)

	.  reduce 32 (src line 216)


state 55
	OPER:  LTE.    (33)

	.  reduce 33 (src line 220)


state 56
	OPER:  GT.    (34)

	.  reduce 34 (src line 224)


state 57
	OPER:  GTE.    (35)

	.  reduce 35 (src line 228)


state 58
	SELECT_STATEMENT:  SELECT COLUMN_NAMES FROM_CLAUSE GROUP_BY_CLAUSE WHERE_CLAUSE ORDER_CLAUSES.LIMIT_INT 
	LIMIT_INT: .    (49)

	LIMIT  shift 47
	.  reduce 49 (src line 289)

	LIMIT_INT  goto 70

state 59
	GROUP_BY_CLAUSE:  GROUP BY DIMENSION_NAMES.    (19)

	.  reduce 19 (src line 157)


state 60
	DIMENSION_NAMES:  DIMENSION_NAME.    (21)
	DIMENSION_NAMES:  DIMENSION_NAME.COMMA DIMENSION_NAMES 

	COMMA  shift 71
	.  reduce 21 (src line 166)


state 61
	DIMENSION_NAME:  IDENT.    (23)

	.  reduce 23 (src line 175)


state 62
	TABLE_NAMES:  TABLE_NAME COMMA TABLE_NAMES.    (17)

	.  reduce 17 (src line 148)


state 63
	LIMIT_INT:  LIMIT INTEGER.    (48)

	.  reduce 48 (src line 284)


state 64
	ORDER_CLAUSES:  ORDER BY SORTFIELDS.    (41)

	.  reduce 41 (src line 253)


state 65
	SORTFIELDS:  SORTFIELD.    (43)
	SORTFIELDS:  SORTFIELD.COMMA SORTFIELDS 

	COMMA  shift 72
	.  reduce 43 (src line 262)


state 66
	SORTFIELD:  IDENT.    (45)
	SORTFIELD:  IDENT.DESC 
	SORTFIELD:  IDENT.ASC 

	DESC  shift 73
	ASC  shift 74
	.  reduce 45 (src line 271)


state 67
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION AND CONDITION.    (27)
	CONDITION:  CONDITION.OR CONDITION 

	.  reduce 27 (src line 194)


state 68
	CONDITION:  CONDITION.AND CONDITION 
	CONDITION:  CONDITION.OR CONDITION 
	CONDITION:  CONDITION OR CONDITION.    (28)

	.  reduce 28 (src line 198)


state 69
	OPERATION_EQUAL:  CONDITION_VAR OPER CONDITION_VAR.    (29)

	.  reduce 29 (src line 202)


state 70
	SELECT_STATEMENT:  SELECT COLUMN_NAMES FROM_CLAUSE GROUP_BY_CLAUSE WHERE_CLAUSE ORDER_CLAUSES LIMIT_INT.    (8)

	.  reduce 8 (src line 97)


state 71
	DIMENSION_NAMES:  DIMENSION_NAME COMMA.DIMENSION_NAMES 

	IDENT  shift 61
	.  error

	DIMENSION_NAMES  goto 75
	DIMENSION_NAME  goto 60

state 72
	SORTFIELDS:  SORTFIELD COMMA.SORTFIELDS 

	IDENT  shift 66
	.  error

	SORTFIELDS  goto 76
	SORTFIELD  goto 65

state 73
	SORTFIELD:  IDENT DESC.    (46)

	.  reduce 46 (src line 276)


state 74
	SORTFIELD:  IDENT ASC.    (47)

	.  reduce 47 (src line 280)


state 75
	DIMENSION_NAMES:  DIMENSION_NAME COMMA DIMENSION_NAMES.    (22)

	.  reduce 22 (src line 171)


state 76
	SORTFIELDS:  SORTFIELD COMMA SORTFIELDS.    (44)

	.  reduce 44 (src line 267)


34 terminals, 24 nonterminals
53 grammar rules, 77/8000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
73 working sets used
memory: parser 46/120000
5 extra closures
68 shift entries, 1 exceptions
34 goto entries
13 entries saved by goto default
Optimizer space used: output 76/120000
76 table entries, 0 zero
maximum spread: 34, maximum offset: 72
